@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2008 - 2012, Phoronix Media
-	Copyright (C) 2008 - 2012, Michael Larabel
+	Copyright (C) 2008 - 2018, Phoronix Media
+	Copyright (C) 2008 - 2018, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -48,6 +48,19 @@ class pts_arrays
 	public static function json_decode($str)
 	{
 		return json_decode($str, true);
+	}
+	public static function duplicates_in_array($array)
+	{
+		$duplicates = array();
+		foreach(array_count_values($array) as $item => $count)
+		{
+			if($count > 1)
+			{
+				$duplicates[] = $item;
+			}
+		}
+
+		return $duplicates;
 	}
 }
 
